public/css/fileInfo.css
.file-info-div {
	padding: 20px;
	position: fixed;
	right: -400px;
	top: 0;
	width: 400px;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	background-color: var(--background-color-dialog);
	border-left: 1px solid var(--color-gray);
	transition: right 0.5s ease;
	display: none;
}

.file-info-div::backdrop {
	background-color: yellow;
}

.show-info {
	display: flex;
	right: 0px;
}

.hide-info {
	display: none;
	right: -400px;
}

.file-info-content,
.file-info-footer,
.file-info-header {
	width: 100%;
	display: flex;
}

.file-info-header {
	justify-content: space-between;
}

.file-info-header > h3 {
	font-size: 20px;
	font-weight: 100;
}

.file-info-header > button {
	width: 35px;
	background-color: transparent;
	border: none;
	color: var(--font-color);
	font-size: 18px;
	cursor: pointer;
}

.file-info-header > button:hover {
	color: var(--color-hover);
}

.file-info-content {
	flex-direction: column;
	min-height: 80vh;
}

.file-info-content > p {
	color: var(--font-color);
	font-size: 16px;
	margin-bottom: 10px;
}

.file-info-footer {
	justify-content: space-around;
}

.file-info-footer > button {
	font-size: 14px;
	font-weight: bolder;
	border-radius: 3px;
	font-family: inherit;
	text-align: left;
	border: none;
	padding: 10px 10px;
	color: var(--color-light-gray);
	background-color: var(--background-black);
	outline: 1px solid var(--color-gray);
	cursor: pointer;
	text-decoration: none;
}

.file-info-footer > button:hover {
	background-color: var(--color-hover-background);
	color: var(--color-hover);
	outline: 1px solid var(--color-hover);
}

.file-info-footer > a {
	font-size: 14px;
	font-weight: bolder;
	border-radius: 3px;
	font-family: inherit;
	text-align: left;
	border: none;
	padding: 10px 10px;
	color: var(--color-light-gray);
	background-color: var(--background-black);
	outline: 1px solid var(--color-gray);
	cursor: pointer;
	text-decoration: none;
}

.file-info-footer > a:hover {
	background-color: var(--color-hover-background);
	color: var(--color-hover);
	outline: 1px solid var(--color-hover);
}

.file-info-div > .file-info-footer > a:nth-child(4) {
	background-color: var(--color-hover);
	color: black;
}

.file-info-download-link {
	width: 100px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.file-info-button {
	width: 80px;
	display: flex;
	justify-content: center;
	align-items: center;
}

